# jupyterm

./: LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py  jupyterm.py
